// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Segmented Button can have an icon 1`] = `
<DocumentFragment>
  <div
    class="mdc-segmented-button"
    role="group"
  >
    <button
      class="mdc-segmented-button__segment"
    >
      <div
        class="mdc-segmented-button__ripple"
      />
      <i
        class="material-icons mdc-segmented-button__icon"
      >
        favorite
      </i>
      <div
        class="mdc-segmented-button__label"
      >
        Segment
      </div>
    </button>
  </div>
</DocumentFragment>
`;

exports[`Segmented Button renders 1`] = `
<DocumentFragment>
  <div
    class="mdc-segmented-button mdc-segmented-button--single-select"
    role="radiogroup"
  >
    <button
      class="mdc-segmented-button__segment"
      role="radio"
      value="cookies"
    >
      <div
        class="mdc-segmented-button__ripple"
      />
      <i
        class="material-icons mdc-segmented-button__icon"
      >
        favorite
      </i>
      <div
        class="mdc-segmented-button__label"
      />
    </button>
    <button
      class="mdc-segmented-button__segment"
      role="radio"
      value="pizza"
    >
      <div
        class="mdc-segmented-button__ripple"
      />
      <div
        class="mdc-segmented-button__label"
      >
        Button
      </div>
    </button>
    <button
      class="mdc-segmented-button__segment"
      role="radio"
      value="icecream"
    >
      <div
        class="mdc-segmented-button__ripple"
      />
      <i
        class="material-icons mdc-segmented-button__icon"
      >
        favorite
      </i>
      <div
        class="mdc-segmented-button__label"
      >
        Button
      </div>
    </button>
  </div>
</DocumentFragment>
`;
